# libtelnet

./: .gitignore  AUTHORS  BUILD.txt  CMakeLists.txt  Makefile  README.md  USE.txt  libtelnet.c  libtelnet.h  libtelnet.pc.in
util/: telnet-chatd.c  telnet-client.c  telnet-proxy.c  telnet-test.c
